<!--
  ~ Copyright (c) 2024. Koushik R <rkoushik.14@gmail.com>.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.grookage.vaanar</groupId>
    <artifactId>vaanar</artifactId>
    <version>0.0.1-RC1</version>
    <packaging>pom</packaging>

    <name>Vaanar</name>
    <url>https://github.com/grookage/vaanar</url>
    <modules>
        <module>vaanar-parent</module>
        <module>vaanar-bom</module>
        <module>vaanar-core</module>
        <module>vaanar-dropwizard</module>
    </modules>
    <description>Chaos Monkey for Dropwizard</description>
    <inceptionYear>2024</inceptionYear>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <scm>
        <connection>scm:git:https://github.com/grookage/vaanar.git</connection>
        <developerConnection>scm:git:https://github.com/grookage/vaanar.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/grookage/vaanar</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/grookage/vaanar/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>koushikr</id>
            <name>Koushik Ramachandra</name>
            <email>rkoushik.14@gmail.com</email>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <java.release.version>17</java.release.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <nexus.staging.plguin.version>1.6.13</nexus.staging.plguin.version>
        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
        <jacoco.version>0.8.8</jacoco.version>
        <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
        <maven.gpg.plugin.version>1.6</maven.gpg.plugin.version>

        <sonar.coverage.exclusions>
            **com/grookage/vaanar//**
        </sonar.coverage.exclusions>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                    <release>${java.release.version}</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
                <dependencies>
                    <dependency>
                        <artifactId>asm</artifactId>
                        <groupId>org.ow2.asm</groupId>
                        <version>7.2</version>
                    </dependency>
                </dependencies>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.compiler.version}</version>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <id>test</id>
                        <phase>test</phase>
                    </execution>
                </executions>
                <version>${maven.surefire.plugin.version}</version>
            </plugin>

            <plugin>
                <artifactId>findbugs-maven-plugin</artifactId>
                <groupId>org.codehaus.mojo</groupId>
                <version>3.0.3</version>
            </plugin>

            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <id>attach-sources</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.source.plugin.version}</version>
            </plugin>

            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <source>11</source>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <id>attach-javadocs</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.javadoc.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.5.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.7.0</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                    <stagingProgressTimeoutMinutes>10</stagingProgressTimeoutMinutes>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
                <executions>
                    <execution>
                        <configuration>
                            <executable>gpg</executable>
                            <useAgent>true</useAgent>
                        </configuration>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven.gpg.plugin.version}</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>add-java-open-options-for-jdk16+</id>
            <activation>
                <jdk>[16,)</jdk>
            </activation>
            <properties>
                <argLine>
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.base/sun.net=ALL-UNNAMED
                </argLine>
            </properties>
        </profile>
    </profiles>
</project>
